--- a/js_modules/dagit/packages/app/package.json
+++ b/js_modules/dagit/packages/app/package.json
@@ -22,11 +22,12 @@
   "devDependencies": {
     "@dagster-io/eslint-config": "workspace:*",
     "@dagster-io/react-scripts": "5.0.3",
+    "@types/eslint": "^8",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.20",
     "@types/react": "17.0.4",
     "@types/react-dom": "^17.0.11",
-    "eslint": "8.7.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-jest": "^26.4.6",
     "eslint-webpack-plugin": "3.1.1",
     "prettier": "2.2.1",
